--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <img src="./assets/Library_home_image.webp" alt="image" style="width:100%">
+  <div class="centered">Welcome to <br> TIES LIBRARY</div>
+</div>
