--- a/src/app/add-book/add-book.component.html
+++ b/src/app/add-book/add-book.component.html
@@ -1,46 +1,48 @@
-<h1 style="padding-left: 30%; color: rgb(7, 182, 226);">Add Book</h1>
-<div class="grid">
-    <div></div>
-    <div>
-        <form class="addbook">
-            <mat-form-field class="addbook-small-width">
-                <textarea matInput placeholder="Book Id"></textarea>
-            </mat-form-field>
-            &nbsp;&nbsp;&nbsp;
-            <mat-form-field class="addbook-medium-width">
-              <input matInput placeholder="Book Name">
-            </mat-form-field>
-          
-            <mat-form-field class="addbook-full-width">
-              <textarea matInput placeholder="Description"></textarea>
-            </mat-form-field>
-        
-            <mat-form-field class="addbook-medium-width">
-                <textarea matInput placeholder="Author"></textarea>
-            </mat-form-field>
-        
-            <mat-form-field class="addbook-medium-width">
-                <textarea matInput placeholder="PUblicatoins"></textarea>
-            </mat-form-field>
-            <br>
-            <mat-form-field class="addbook-small-width">
-                <textarea matInput placeholder="Price"></textarea>
-            </mat-form-field>
-            <br>
-            <button style="
-            background-color: #4CAF50; /* Green */
-            border: none;
-            color: white;
-            padding: 10px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            ">
-            submit
-            </button>
-            <br><br><br>
-          </form>
+<form class="form" [formGroup]="bookFrm" (ngSubmit)="addbook(bookFrm.value)">
+
+    <h1 style="padding-left: 30%; color: rgb(7, 182, 226);">Add Book</h1>
+
+
+    <mat-form-field>
+        <input  matInput placeholder="Book Id" type="text" name="book Id" [formControl]="bookFrm.controls['book_id']" formControlName="book_id">
+    </mat-form-field>
+    <!-- <div class="alert" *ngIf="!bookFrm.controls['id'].valid && bookFrm.controls['id'].touched">
+    You must specify a title that's at least 10 characters long.
+    </div> -->
+
+    <mat-form-field>
+    <textarea matInput placeholder="Book Name" name="book_name" id="book_name" required [formControl]="bookFrm.controls['book_name']" formControlName="book_name"></textarea>
+    </mat-form-field>
+    <!-- <div class="alert" *ngIf="!bookFrm.controls['name'].valid && bookFrm.controls['name'].touched">
+    You must specify content that's at least 10 characters long.
+    </div> -->
+
+    <mat-form-field>
+    <textarea matInput placeholder="description" name="description" id="description" required [formControl]="bookFrm.controls['description']" formControlName="description"></textarea>
+    </mat-form-field>
+    <!-- <div class="alert" *ngIf="!bookFrm.controls['deartment'].valid && bookFrm.controls['deartment'].touched">
+    You must specify content that's at least 10 characters long.
+    </div> -->
+
+    <mat-form-field>
+        <textarea matInput placeholder="author" name="author" id="author" required [formControl]="bookFrm.controls['author']" formControlName="author"></textarea>
+    </mat-form-field>
+
+    <mat-form-field>
+            <textarea matInput placeholder="publication" name="publication" id="publication" required [formControl]="bookFrm.controls['publication']" formControlName="publication"></textarea>
+    </mat-form-field>
+    
+    <mat-form-field>
+        <textarea matInput placeholder="price" name="price" id="price" required [formControl]="bookFrm.controls['price']" formControlName="price"></textarea>
+    </mat-form-field>
+
+    <!-- <mat-form-field>
+        <textarea matInput placeholder="status" name="status" id="status" required [formControl]="bookFrm.controls['status']" formControlName="status"></textarea>
+    </mat-form-field> -->
+    <div *ngIf="!bookFrm.valid">
+        <input type="submit" class="cta-btn filled" value="Post Book" [disabled]="!bookFrm.valid" class="button-off">
     </div>
-    <div></div>
-</div>
+    <div *ngIf="bookFrm.valid">
+        <input type="submit" class="cta-btn filled" value="Post Book" [disabled]="!bookFrm.valid" class="button-on">
+    </div>
+</form>
