--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,15 @@
     <td-navigation-drawer flex sidenavTitle="Library" logo="assets:teradata" name="Firstname Lastname" email="firstname.lastname@company.com">
       <mat-nav-list>
         <ol>
-            <li><a [routerLink]="['/']" >Home</a></li>
-            <li><a [routerLink]="['/books']" >Books</a></li>
-            <li><a [routerLink]="['/addbook']" >Add Books</a></li>
-            <li><a href="#">Remove book</a></li>
+            <li><a [routerLink]="['/']" > <mat-icon>home</mat-icon> Home</a></li>
+            <li><a [routerLink]="['/books']" ><mat-icon>book</mat-icon>Books</a></li>
+            <li><a [routerLink]="['/addbook']" ><mat-icon>add</mat-icon>Add Books</a></li>
+            <li><a href="#"><mat-icon>delete</mat-icon>Remove book</a></li>
             <li><a href="#">Reinstate</a></li>
             <li><a href="#">Feedback</a></li>
         </ol>
       </mat-nav-list>
+      
       <div td-navigation-drawer-menu>
         <mat-nav-list>
           <a *ngFor="let item of usermenu" mat-list-item><mat-icon>{{item.icon}}</mat-icon>{{item.title}}</a>
@@ -25,10 +26,10 @@
         <span [routerLink]="['/']" class="cursor-pointer">Library</span>
         <span flex></span>
         <ul id="horizontal">
-          <li><a [routerLink]="['/']" >Home</a></li>
-          <li><a [routerLink]="['books']" >Books</a></li>
-          <li><a [routerLink]="['addbook']" >Add Books</a></li>
-          <li><a href="#">Remove book</a></li>
+          <li><a [routerLink]="['/']" ><mat-icon>home</mat-icon> Home</a></li>
+          <li><a [routerLink]="['books']" ><mat-icon>book</mat-icon>Books</a></li>
+          <li><a [routerLink]="['addbook']" ><mat-icon>add</mat-icon> Add Books</a></li>
+          <li><a href="#"><mat-icon>delete</mat-icon>Remove book</a></li>
           <li><a href="#">Reinstate</a></li>
           <li><a href="#">Feedback</a></li>
         </ul>
