--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,13 +1,22 @@
+<div class="total">
+  
 <h1>
   Library Books
 </h1>
 
 
+<div class="wrap">
+    <div class="search">
+       <input type="text" class="searchTerm" placeholder="What are you looking for?">
+       <button type="submit" ><mat-icon>search</mat-icon>
+      </button>
+    </div>
+ </div>
+
+
 <div class="grid">
   <div></div>
-
-
-  <div>
+  <div class="middle-div">
 
       <mat-tab-group mat-stretch-tabs>
           <mat-tab>
@@ -72,4 +81,5 @@
 
 
   <div></div>
+</div>
 </div>
