--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,8 +16,8 @@ ol {
     text-decoration: none;
 }
 
-.li a.active {
-    background-color: #4CAF50;
+.li a:active {
+    background-color: green;
     color: white;
 }
 
@@ -53,3 +53,4 @@ li a:hover:not(.active) {
 .active {
     background-color: #4CAF50;
 }
+
