--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,56 +1,69 @@
 ol {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    background-color: #ff790b;
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    overflow: auto;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: #ff790b;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
 }
 .li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
 }
 
 .li a:active {
-    background-color: green;
-    color: white;
+  background-color: green;
+  color: white;
 }
 
 .li a:hover:not(.active) {
-    background-color: #555;
-    color: white;
+  background-color: #555;
+  color: white;
 }
 
-
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+  display: inline-flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+ul.li.a.span {
+  background-color: aqua;
+}
+@media all and (min-width: 1100px) {
+  ul {
+    display: flex;
+  }
+}
+
+@media all and (max-width: 1099px) {
+  .responsive {
+    display: none;
+  }
 }
 
 #horizontal li {
-    float: left;
+  float: left;
 }
 
 li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
 li a:hover:not(.active) {
-    background-color: rgb(137, 142, 204);
+  background-color: rgb(137, 142, 204);
 }
 
 .active {
-    background-color: lightseagreen;
+  background-color: lightseagreen;
 }
-
