--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,69 +1,66 @@
 <div class="total">
-  
-<h1>
-  TIES Library Books
-</h1>
+
+  <h1>
+    TIES Library Books
+  </h1>
 
 
 
-<div class="grid">
-  <div></div>
-  <div class="middle-div">
+  <div class="grid">
+    <div></div>
+    <div class="middle-div">
 
       <div class="tabs">
-          <mat-tab-group mat-stretch-tabs>
-              <mat-tab>
-                <ng-template matTabLabel>
-                  <div layout="row" layout-align="center center" (click)="allbooks()">
-                      <h3>All Books</h3>
-                  </div>
-                </ng-template>
-              </mat-tab>
+        <mat-tab-group mat-stretch-tabs>
+          <mat-tab>
+            <ng-template matTabLabel>
+              <div layout="row" layout-align="center center" (click)="allbooks()">
+                <h3>All Books</h3>
+              </div>
+            </ng-template>
+          </mat-tab>
 
-              <mat-tab >
-                  <ng-template matTabLabel>
-                    <div layout="row" layout-align="center center" (click)="avaliablebooks()">
-                        <h3>Avaliable Books</h3>
-                    </div>
-                  </ng-template>
-                </mat-tab>
+          <mat-tab>
+            <ng-template matTabLabel>
+              <div layout="row" layout-align="center center" (click)="avaliablebooks()">
+                <h3>Avaliable Books</h3>
+              </div>
+            </ng-template>
+          </mat-tab>
 
-              <mat-tab>
-                <ng-template matTabLabel>
-                  <div layout="row" layout-align="center center" (click)="reservedbooks()">
-                      <h3>Reserved Books</h3>
-                  </div>
-                </ng-template>
-              </mat-tab>
-          </mat-tab-group>
+          <mat-tab>
+            <ng-template matTabLabel>
+              <div layout="row" layout-align="center center" (click)="reservedbooks()">
+                <h3>Reserved Books</h3>
+              </div>
+            </ng-template>
+          </mat-tab>
+        </mat-tab-group>
       </div>
 
 
       <div layout="row" layout-align="start center" class="pad-left-sm pad-right-sm" style="background-color: orange">
         <span *ngIf="!searchBox.searchVisible" class="push-left-sm">
           <span class="mat-title">TIES Library Books</span>
-          <span  class="mat-title" *ngIf="router.url=='/remove'">-Removing page</span>
+          <span class="mat-title" *ngIf="router.url=='/remove'">-Removing page</span>
         </span>
         <span *ngIf="!searchBox.searchVisible" class="push-left-sm">
         </span>
-        <td-search-box #searchBox backIcon="arrow_back" class="push-right-sm" placeholder="Search here" (searchDebounce)="search($event)" flex>
+        <td-search-box #searchBox backIcon="arrow_back" class="push-right-sm" placeholder="Search here" (searchDebounce)="search($event)"
+          flex>
         </td-search-box>
       </div>
       <mat-divider></mat-divider>
-      <td-data-table style="background-color: white; "
-        #dataTable
-        [data]="filteredData"
-        [columns]="columns"
-        [clickable]="true"
-        (rowClick)="showAlert($event)">      
-        </td-data-table>
+      <td-data-table style="background-color: white; " #dataTable [data]="filteredData" [columns]="columns" [clickable]="true"
+        (rowClick)="showAlert($event)">
+      </td-data-table>
       <div class="md-padding" *ngIf="!dataTable.hasData" layout="row" layout-align="center center">
         <h3>No results to display.</h3>
       </div>
 
+    </div>
+
+
+    <div></div>
   </div>
-
-
-  <div></div>
-</div>
 </div>
