Added reinstate also

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,7 +70,7 @@
           </a>
         </li>
         <li>
-          <a href="#" routerLinkActive="active">
+          <a [routerLink]="['reinstate']" routerLinkActive="active">
             <mat-icon>restore</mat-icon>
             <span class="responsive">Reinstate</span>
           </a>
