Added style to all books avaliable and reserved tabs also

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
             <mat-icon>delete</mat-icon>Remove book</a>
         </li>
         <li>
-          <a href="#" routerLinkActive="active">
+          <a [routerLink]="['reinstate']" routerLinkActive="active">
             <mat-icon>restore</mat-icon>Reinstate</a>
         </li>
         <li>
