--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -6,17 +6,17 @@
 <div class="middle-div">
   <div class="tabs">
     <div>
-      <a (click)="allbooks()">
+      <a (click)="allbooks()" [ngStyle]="style_all">
         <span class="responsive">All Books</span>
       </a>
     </div>
     <div>
-      <a (click)="avaliablebooks()">
+      <a (click)="avaliablebooks()" [ngStyle]="style_avaliable">
         <span class="responsive">Avaliable Books</span>
       </a>
     </div>
     <div>
-      <a (click)="reservedbooks()">
+      <a (click)="reservedbooks()" [ngStyle]="style_reserved">
         <span class="responsive">Reserved Books</span>
       </a>
     </div>
