--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -26,7 +26,9 @@
   <div layout="row" layout-align="start center" class="pad-left-sm pad-right-sm" style="background-color: orange">
     <span *ngIf="!searchBox.searchVisible" class="push-left-sm">
       <span class="mat-title">TIES Library Books</span>
-      <span class="mat-title" *ngIf="router.url=='/remove'">-Removing page</span>
+      <span class="mat-title" *ngIf="router.url=='/books'">-Reserve Books</span>
+      <span class="mat-title" *ngIf="router.url=='/remove'">-Removing Books</span>
+      <span class="mat-title" *ngIf="router.url=='/reinstate'">-Reinstate Books</span>
     </span>
     <span *ngIf="!searchBox.searchVisible" class="push-left-sm">
     </span>
