--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,11 +31,14 @@
 
     <div td-navigation-drawer-menu>
       <mat-nav-list>
-        <a *ngFor="let item of usermenu" mat-list-item>
-          <mat-icon>{{item.icon}}</mat-icon>{{item.title}}</a>
+        <a href="#">sidenavbar</a>
+        <!-- <a *ngFor="let item of usermenu" mat-list-item>
+          <mat-icon>{{item.icon}}</mat-icon>{{item.title}}</a> -->
       </mat-nav-list>
     </div>
+
   </td-navigation-drawer>
+
   <td-layout-nav color="accent">
     <div td-toolbar-content layout="row" layout-align="start center" flex>
       <button mat-icon-button td-menu-button tdLayoutToggle>
