Commit before adding promises to mysql

--- a/src/app/add-book/add-book.component.css
+++ b/src/app/add-book/add-book.component.css
@@ -1,43 +1,47 @@
-.form{
+.form {
   display: flex;
   flex-direction: column;
-  width:900px;
-  height:750px;
-  background:#e6e6e6;
-  border-radius:8px;
-  box-shadow:0 0 40px -10px #000;
-  margin:calc(50vh - 220px) auto;
-  padding:20px 30px;
-  max-width:calc(100vw - 40px);
-  box-sizing:border-box;
-  font-family:'Montserrat',sans-serif;
-  position:relative;
+  width: 60%;
+  height: 750px;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 0 40px -10px #000;
+  margin: calc(40vh - 220px) auto;
+  padding: 20px 30px;
+  max-width: calc(100vw - 40px);
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  position: relative;
 }
 
-.button-off{
-  float:right;
-  padding:8px 12px;
-  margin:8px 0 0;
-  font-family:'Montserrat',sans-serif;
-  border:2px solid #78788c;
-  background:0;
-  color:#5a5a6e;
-  cursor:pointer;
-  transition:all .3s
+.text-area {
+  width: 50px;
 }
 
-.button-on{
-  float:right;
-  padding:8px 12px;
-  margin:8px 0 0;
-  font-family:'Montserrat',sans-serif;
-  border:2px solid #78788c;
-  background:0;
-  color:#5a5a6e;
-  cursor:pointer;
-  transition:all .3s
+.button-off {
+  float: right;
+  padding: 8px 12px;
+  margin: 8px 0 0;
+  font-family: "Montserrat", sans-serif;
+  border: 2px solid #78788c;
+  background: 0;
+  color: #5a5a6e;
+  cursor: pointer;
+  transition: all 0.3s;
 }
-.button-on:hover{
-  background:#78788c;
-  color:#fff
+
+.button-on {
+  float: right;
+  padding: 8px 12px;
+  margin: 8px 0 0;
+  font-family: "Montserrat", sans-serif;
+  border: 2px solid #78788c;
+  background: 0;
+  color: #5a5a6e;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.button-on:hover {
+  background: #78788c;
+  color: #fff;
 }
