--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,11 @@
 
     <div td-navigation-drawer-menu>
       <mat-nav-list>
-        <a href="#">sidenavbar</a>
+        <ol>
+          <li>
+            <a href="#">Admin Section</a>
+          </li>
+        </ol>
         <!-- <a *ngFor="let item of usermenu" mat-list-item>
           <mat-icon>{{item.icon}}</mat-icon>{{item.title}}</a> -->
       </mat-nav-list>
